linking Productos section

--- a/productos.html
+++ b/productos.html
@@ -13,7 +13,7 @@
 
             <ul>
                 <li><a href="home_barberia.html">Home</a></li>
-                <li>Productos</li>
+                <li><a href="productos.html">Productos</a></li>
                 <li>Contacto</li>
             </ul>
         </header>
