--- a/productos.html
+++ b/productos.html
@@ -10,12 +10,13 @@
     <body>
         <header>
             <h1><img src="imagenes/logo.png"></h1>
-
-            <ul>
-                <li><a href="home_barberia.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li>Contacto</li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="home_barberia.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li>Contacto</li>
+                </ul>
+            </nav>
         </header>
 
     </body>
