--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Productos - Barberia Alura</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href = "productos.css">
     </head>
 
@@ -14,7 +15,7 @@
                 <ul>
                     <li><a href="home_barberia.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li>Contacto</li>
+                    <li><a>Contacto</a></li>
                 </ul>
             </nav>
         </header>
