adding div and a class to div

--- a/productos.html
+++ b/productos.html
@@ -5,19 +5,22 @@
         <meta charset="UTF-8">
         <title> Productos - Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
+        <!-- con reset elimino las configuraciones que vienen pro defecto en el navegador -->
         <link rel="stylesheet" href = "productos.css">
     </head>
 
     <body>
         <header>
-            <h1><img src="imagenes/logo.png"></h1>
-            <nav>
-                <ul>
-                    <li><a href="home_barberia.html">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a>Contacto</a></li>
-                </ul>
-            </nav>
+            <div class="caja">
+                <h1><img src="imagenes/logo.png"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="home_barberia.html">Home</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a>Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
     </body>
