--- a/productos.html
+++ b/productos.html
@@ -23,5 +23,10 @@
             </div>
         </header>
 
+        <main>
+            Cabello
+            Barba 
+            Cabello + Barba
+        </main>
     </body>
 </html>
