Making a tag structure for main

--- a/productos.html
+++ b/productos.html
@@ -24,9 +24,29 @@
         </header>
 
         <main>
-            Cabello
-            Barba 
-            Cabello + Barba
+            <ul>
+                <li>
+                    <h2></h2>
+                    <img>
+                    <p></p>
+                    <p></p>
+                    Cabello
+                </li>
+                <li>
+                    <h2></h2>
+                    <img>
+                    <p></p>
+                    <p></p>
+                    Barba
+                </li>
+                <li>
+                    <h2></h2>
+                    <img>
+                    <p></p>
+                    <p></p>
+                    Cabello + Barba
+                </li>
+            </ul>
         </main>
     </body>
 </html>
