--- a/productos.html
+++ b/productos.html
@@ -26,25 +26,22 @@
         <main>
             <ul>
                 <li>
-                    <h2></h2>
-                    <img>
+                    <h2>Cabello</h2>
+                    <img src="imagenes/cabello.jpg">
                     <p></p>
                     <p></p>
-                    Cabello
                 </li>
                 <li>
-                    <h2></h2>
-                    <img>
+                    <h2>Barba</h2>
+                    <img src="imagenes/barba.jpg">
                     <p></p>
                     <p></p>
-                    Barba
                 </li>
                 <li>
-                    <h2></h2>
-                    <img>
+                    <h2>Cabello + Barba</h2>
+                    <img src="imagenes/cabello+barba.jpg">
                     <p></p>
                     <p></p>
-                    Cabello + Barba
                 </li>
             </ul>
         </main>
