--- a/productos.html
+++ b/productos.html
@@ -28,20 +28,20 @@
                 <li>
                     <h2>Cabello</h2>
                     <img src="imagenes/cabello.jpg">
-                    <p></p>
-                    <p></p>
+                    <p>Con tijera o maquina, a gusto del cliente</p>
+                    <p>$ 10.00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
                     <img src="imagenes/barba.jpg">
-                    <p></p>
-                    <p></p>
+                    <p>Corte y diseño profesional de barba</p>
+                    <p>$ 8.00</p>
                 </li>
                 <li>
                     <h2>Cabello + Barba</h2>
                     <img src="imagenes/cabello+barba.jpg">
-                    <p></p>
-                    <p></p>
+                    <p>Paquete completo de cabello y barba</p>
+                    <p>$ 15.00</p>
                 </li>
             </ul>
         </main>
