--- a/productos.html
+++ b/productos.html
@@ -29,19 +29,19 @@
                     <h2>Cabello</h2>
                     <img src="imagenes/cabello.jpg">
                     <p class="descripcion">Con tijera o maquina, a gusto del cliente</p>
-                    <p>$ 10.00</p>
+                    <p class="precio">$ 10.00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
                     <img src="imagenes/barba.jpg">
                     <p class="descripcion">Corte y diseño profesional de barba</p>
-                    <p>$ 8.00</p>
+                    <p class="precio">$ 8.00</p>
                 </li>
                 <li>
                     <h2>Cabello + Barba</h2>
                     <img src="imagenes/cabello+barba.jpg">
                     <p class="descripcion">Paquete completo de cabello y barba</p>
-                    <p>$ 15.00</p>
+                    <p class="precio">$ 15.00</p>
                 </li>
             </ul>
         </main>
