adding @ to my footer

--- a/productos.html
+++ b/productos.html
@@ -48,7 +48,7 @@
 
         <footer>
             <img src="imagenes/logo-blanco.png">
-            <p>Copyright Barbería Alura - 2020</p>
+            <p>@Copyright Barbería Alura - 2020</p>
         </footer>
     </body>
 </html>
