--- a/home_barberia.html
+++ b/home_barberia.html
@@ -47,6 +47,10 @@
 
         </div>
 
+        <footer>
+            <img src="imagenes/logo-blanco.png">
+            <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
+        </footer>
     </body>
 
 </html>
