--- a/home_barberia.html
+++ b/home_barberia.html
@@ -8,6 +8,7 @@
         <title>Barberia Alura</title>
          <!--Definiendo el titulo de mi pagina-->
         <link rel="stylesheet" href="style_barberia.css">
+        <link rel="stylesheet" href = "productos.css">
     </head>
 
     <!--Etiquetas de contenido con body-->
