--- a/home_barberia.html
+++ b/home_barberia.html
@@ -6,9 +6,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Barberia Alura</title>
+        <link rel="stylesheet" href = "productos.css">
          <!--Definiendo el titulo de mi pagina-->
         <link rel="stylesheet" href="style_barberia.css">
-        <link rel="stylesheet" href = "productos.css">
     </head>
 
     <!--Etiquetas de contenido con body-->
@@ -18,35 +18,37 @@
             <h1 class="titulo_principal">Barberia Alura</h1>
         </header>
 
-        <img id="banner" src="banner/banner.jpg">
+        <main>
+            <img id="banner" src="banner/banner.jpg">
 
-        <div class="principal">
+            <div class="principal">
 
-            <h2 class="titulo">Sobre la Barbería Alura</h2>
+                <h2 class="titulo">Sobre la Barbería Alura</h2>
 
-            <p id="mision">Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
+                <p id="mision">Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
-            <p><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
+                <p><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
 
-            <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p> 
+                <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p> 
 
-        </div>
+            </div>
 
-        <div class="diferenciales">
-            <h3 class="titulo">Diferenciales</h3>
+            <div class="diferenciales">
+                <h3 class="titulo">Diferenciales</h3>
 
-            <!-- ul es para usar listas no ordenadas -->
-            <!-- li es para crear cada item de la lista -->
-            <ul>
-                <li class="items">Atención personalizada a los clientes</li>
-                <li class="items">Espacio diferenciado</li>
-                <li class="items">localización</li>
-                <li class="items">profesionales calificados</li>
-            </ul>
+                <!-- ul es para usar listas no ordenadas -->
+                <!-- li es para crear cada item de la lista -->
+                <ul>
+                    <li class="items">Atención personalizada a los clientes</li>
+                    <li class="items">Espacio diferenciado</li>
+                    <li class="items">localización</li>
+                    <li class="items">profesionales calificados</li>
+                </ul>
 
-            <img src="diferenciales/diferenciales.jpg" class="imagen_diferenciales">   
+                <img src="diferenciales/diferenciales.jpg" class="imagen_diferenciales">   
 
-        </div>
+            </div>
+        </main>
 
         <footer>
             <img src="imagenes/logo-blanco.png">
