--- a/home_barberia.html
+++ b/home_barberia.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Barberia Alura</title>
-        <link rel="stylesheet" href = "productos.css">
+        <link rel="stylesheet" href="reset.css">
          <!--Definiendo el titulo de mi pagina-->
         <link rel="stylesheet" href="style_barberia.css">
     </head>
