Changing picture of my main

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -19,7 +19,7 @@
         </header>
 
         <main>
-            <img id="banner" src="banner/banner.jpg">
+            <img id="banner" src="banner/sillas.jpg">
 
             <div class="principal">
 
