--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a href="home_barberia.html">Home</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a>Contacto</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
