--- a/home_barberia.html
+++ b/home_barberia.html
@@ -13,9 +13,17 @@
 
     <!--Etiquetas de contenido con body-->
     <body>
-
         <header>
-            <h1 class="titulo_principal">Barberia Alura</h1>
+            <div class="caja">
+                <h1><img src="imagenes/logo.png"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="home_barberia.html">Home</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
         <main>
