--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Productos - Barberia Alura</title>
+        <title> Contacto - Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <!-- con reset elimino las configuraciones que vienen pro defecto en el navegador -->
         <link rel="stylesheet" href = "productos.css">
