Changing the href of my pages

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -8,7 +8,7 @@
         <title>Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
          <!--Definiendo el titulo de mi pagina-->
-        <link rel="stylesheet" href="style_barberia.css">
+        <link rel="stylesheet" href="style_home.css">
     </head>
 
     <!--Etiquetas de contenido con body-->
