Changes in name contactos to contacto

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
         <title> Contacto - Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <!-- con reset elimino las configuraciones que vienen pro defecto en el navegador -->
-        <link rel="stylesheet" href = "style_contactos.css">
+        <link rel="stylesheet" href = "style_contacto.css">
     </head>
 
     <body>
