--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,12 @@
             </div>
         </header>
 
+        <main>
+            <form>
+                <input type="text">
+            </form>
+        </main>
+
         <footer>
             <img src="imagenes/logo-blanco.png">
             <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
