New label Nombre y apellido

--- a/contacto.html
+++ b/contacto.html
@@ -24,6 +24,9 @@
         </header>
 
         <main>
+            <!-- le añado una etiqueta -->
+            <label>Nombre y Apellido</label>
+            <!-- creando mi formulario -->
             <form>
                 <input type="text">
             </form>
