New label Correo electronico

--- a/contacto.html
+++ b/contacto.html
@@ -24,11 +24,14 @@
         </header>
 
         <main>
-            <!-- le añado una etiqueta -->
-            <label>Nombre y Apellido</label>
-            <!-- creando mi formulario -->
             <form>
-                <input type="text">
+                <!-- le añado una etiqueta -->
+                <label for="nombreapellido">Nombre y Apellido</label>
+                <!-- creando mi formulario -->
+                <input type="text" id="nombreapellido">
+                
+                <label for="correoelectronico">Correo Electronico</label>
+                <input type="text" id="correoelectronico">
             </form>
         </main>
 
