Adding a new label telefono

--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,9 @@
                 
                 <label for="correoelectronico">Correo Electronico</label>
                 <input type="text" id="correoelectronico">
+
+                <label for="telefono">Telefono</label>
+                <input type="text" id="telefono"
             </form>
         </main>
 
