--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
                 <input type="text" id="correoelectronico">
 
                 <label for="telefono">Telefono</label>
-                <input type="text" id="telefono"
+                <input type="text" id="telefono">
             </form>
         </main>
 
