Added main set up

--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title> Contacto - Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
-        <!-- con reset elimino las configuraciones que vienen pro defecto en el navegador -->
+        <!-- con reset elimino las configuraciones que vienen por defecto en el navegador -->
         <link rel="stylesheet" href = "style_contacto.css">
     </head>
 
