--- a/contacto.html
+++ b/contacto.html
@@ -35,6 +35,8 @@
 
                 <label for="telefono">Telefono</label>
                 <input type="text" id="telefono">
+
+                <input type="submit" value="Enviar Formulario">
             </form>
         </main>
 
