--- a/contacto.html
+++ b/contacto.html
@@ -36,6 +36,9 @@
                 <label for="telefono">Telefono</label>
                 <input type="text" id="telefono">
 
+                <label for="mensaje">Mensaje</label>
+                <textarea cols="70" rows="10" id="mensaje"></textarea>
+
                 <input type="submit" value="Enviar Formulario">
             </form>
         </main>
