--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,16 @@
                 <input type="text" id="telefono">
 
                 <label for="mensaje">Mensaje</label>
-                <textarea cols="70" rows="10" id="mensaje"></textarea>
+                <textarea cols="68" rows="10" id="mensaje"></textarea>
+
+                <label for="radio-email">Email</label>
+                <input type="radio" value="email" id="radio-email">
+
+                <label for="radio-telefono">Telefono</label>
+                <input type="radio" value="telefono" id="radio-telefono">
+
+                <label for="radio-whatsapp">Whatsapp</label>
+                <input type="radio" value="whatsapp" id="radio-whatsapp">
 
                 <input type="submit" value="Enviar Formulario">
             </form>
