--- a/contacto.html
+++ b/contacto.html
@@ -39,16 +39,21 @@
                 <label for="mensaje">Mensaje</label>
                 <textarea cols="68" rows="10" id="mensaje"></textarea>
 
-                <label for="radio-email">Email</label>
-                <input type="radio" value="email" id="radio-email">
+                <div>
+                    <p>Como le gustaria que lo contactemos?</p>
 
-                <label for="radio-telefono">Telefono</label>
-                <input type="radio" value="telefono" id="radio-telefono">
+                    <label for="radio-email">Email</label>
+                    <input type="radio" name="contacto" value="email" id="radio-email">
 
-                <label for="radio-whatsapp">Whatsapp</label>
-                <input type="radio" value="whatsapp" id="radio-whatsapp">
+                    <label for="radio-telefono">Telefono</label>
+                    <input type="radio" name="contacto" value="telefono" id="radio-telefono">
+
+                    <label for="radio-whatsapp">Whatsapp</label>
+                    <input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp">
+                </div>
 
                 <input type="submit" value="Enviar Formulario">
+                
             </form>
         </main>
 
