--- a/contacto.html
+++ b/contacto.html
@@ -51,9 +51,12 @@
                     <label for="radio-whatsapp">Whatsapp</label>
                     <input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp">
                 </div>
+                
+                <!-- otra forma de poner el label y el input -->
+                <label><input type="checkbox">Le gustaria recibir novedades de la Barberia?</label>
 
                 <input type="submit" value="Enviar Formulario">
-                
+
             </form>
         </main>
 
