--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,7 @@
                 <input type="text" id="telefono" class="input-padron">
 
                 <label for="mensaje">Mensaje</label>
-                <textarea cols="68" rows="10" id="mensaje"></textarea>
+                <textarea cols="68" rows="10" id="mensaje" class="input-padron"></textarea>
 
                 <div>
                     <p>Como le gustaria que lo contactemos?</p>
