Creating a class checkbox

--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
                 </div>
                 
                 <!-- otra forma de poner el label y el input -->
-                <label><input type="checkbox">Le gustaria recibir novedades de la Barberia?</label>
+                <label class="checkbox"><input type="checkbox">Le gustaria recibir novedades de la Barberia?</label>
 
                 <input type="submit" value="Enviar Formulario">
 
