--- a/contacto.html
+++ b/contacto.html
@@ -49,6 +49,12 @@
                     <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp">Whatsapp</label>
                     
                 </div>
+                <p>En cuál horario prefiere ser atendido?</p>
+                <select>
+                    <option>Mañana</option>
+                    <option>Tarde</option>
+                    <option>Noche</option>
+                </select>
                 
                 <!-- otra forma de poner el label y el input -->
                 <label class="checkbox"><input type="checkbox">Le gustaria recibir novedades de la Barberia?</label>
