--- a/contacto.html
+++ b/contacto.html
@@ -31,16 +31,16 @@
                 <input type="text" id="nombreapellido" class="input-padron">
                 
                 <label for="correoelectronico">Correo Electronico</label>
-                <input type="text" id="correoelectronico" class="input-padron">
+                <input type="email" id="correoelectronico" class="input-padron">
 
                 <label for="telefono">Telefono</label>
-                <input type="text" id="telefono" class="input-padron">
+                <input type="tel" id="telefono" class="input-padron">
 
                 <label for="mensaje">Mensaje</label>
                 <textarea cols="68" rows="10" id="mensaje" class="input-padron"></textarea>
 
                 <div>
-                    <p>Como le gustaria que lo contactemos?</p>
+                    <p>¿Como le gustaria que lo contactemos?</p>
 
                     <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
 
@@ -51,7 +51,7 @@
                 </div>
 
                 <div>
-                    <p>En cuál horario prefiere ser atendido?</p>
+                    <p>¿En cuál horario prefiere ser atendido?</p>
                     <select>
                         <option>Mañana</option>
                         <option>Tarde</option>
