--- a/contacto.html
+++ b/contacto.html
@@ -28,20 +28,20 @@
                 <!-- le añado una etiqueta -->
                 <label for="nombreapellido">Nombre y Apellido</label>
                 <!-- creando mi formulario -->
-                <input type="text" id="nombreapellido" class="input-padron">
+                <input type="text" id="nombreapellido" class="input-padron" required>
                 
                 <label for="correoelectronico">Correo Electronico</label>
-                <input type="email" id="correoelectronico" class="input-padron">
+                <input type="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
 
                 <label for="telefono">Telefono</label>
-                <input type="tel" id="telefono" class="input-padron">
+                <input type="tel" id="telefono" class="input-padron" required placeholder="(XX) XXXX XXXX">
 
                 <label for="mensaje">Mensaje</label>
                 <textarea cols="68" rows="10" id="mensaje" class="input-padron"></textarea>
 
                 <div>
                     <p>¿Como le gustaria que lo contactemos?</p>
-
+                    <!-- pongo el input dentro del label para que se aline con mis opciones-->
                     <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
 
                     <label for="radio-telefono"><input type="radio" name="contacto" value="telefono" id="radio-telefono">Telefono</label>
