new class enviar

--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,7 @@
                 <!-- otra forma de poner el label y el input -->
                 <label class="checkbox"><input type="checkbox" checked>Le gustaria recibir novedades de la Barberia?</label>
 
-                <input type="submit" value="Enviar Formulario">
+                <input type="submit" value="Enviar Formulario" class="enviar">
 
             </form>
         </main>
