--- a/contacto.html
+++ b/contacto.html
@@ -66,6 +66,26 @@
                 <input type="submit" value="Enviar Formulario" class="enviar">
 
             </form>
+
+            <table>
+                <tr>
+                    <td>Dia</td>
+                    <td>Horario</td>
+                </tr>
+                <tr>
+                    <td>Lunes</td>
+                    <td>08 ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Miercoles</td>
+                    <td>08 ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Viernes</td>
+                    <td>08 ~ 20h</td>
+                </tr>
+            </table>
+
         </main>
 
         <footer>
