--- a/contacto.html
+++ b/contacto.html
@@ -68,22 +68,29 @@
             </form>
 
             <table>
-                <tr>
-                    <td>Dia</td>
-                    <td>Horario</td>
-                </tr>
-                <tr>
-                    <td>Lunes</td>
-                    <td>08 ~ 20h</td>
-                </tr>
-                <tr>
-                    <td>Miercoles</td>
-                    <td>08 ~ 20h</td>
-                </tr>
-                <tr>
-                    <td>Viernes</td>
-                    <td>08 ~ 20h</td>
-                </tr>
+                <!-- mi encabezado de tabla-->
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horario</th>
+                    </tr>
+                </thead>
+
+                <!-- El cuerpo de mi tabla-->
+                <tbody>
+                    <tr>
+                        <td>Lunes</td>
+                        <td>08 ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Miercoles</td>
+                        <td>08 ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Viernes</td>
+                        <td>08 ~ 20h</td>
+                    </tr>
+                </tbody>
             </table>
 
         </main>
