--- a/contacto.html
+++ b/contacto.html
@@ -77,6 +77,7 @@
                 </thead>
 
                 <!-- El cuerpo de mi tabla-->
+                <!-- tr-filas td-columnas -->
                 <tbody>
                     <tr>
                         <td>Lunes</td>
