Changing div for section

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -27,9 +27,9 @@
         </header>
 
         <main>
-            <img id="banner" src="banner/sillas.jpg">
+            <img class="banner" src="banner/sillas.jpg">
 
-            <div class="principal">
+            <section class="principal">
 
                 <h2 class="titulo">Sobre la Barbería Alura</h2>
 
@@ -39,9 +39,9 @@
 
                 <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p> 
 
-            </div>
+            </section>
 
-            <div class="diferenciales">
+            <section class="diferenciales">
                 <h3 class="titulo">Diferenciales</h3>
 
                 <!-- ul es para usar listas no ordenadas -->
@@ -55,7 +55,7 @@
 
                 <img src="diferenciales/diferenciales.jpg" class="imagen_diferenciales">   
 
-            </div>
+            </section>
         </main>
 
         <footer>
