Creating a new class utencilios

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -33,6 +33,9 @@
 
                 <h2 class="titulo">Sobre la Barbería Alura</h2>
 
+                <!-- alt sirve para darle informacion al usuario en caso de que no cargue la imagen -->
+                <img class="utencilios" src="imagenes/utensilios.jpg" alt="utencilios de un barbero">
+
                 <p id="localizacion">Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
                 <p id="mision">Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</p>
