--- a/home_barberia.html
+++ b/home_barberia.html
@@ -44,6 +44,12 @@
 
             </section>
 
+            <section class="mapa">
+                <h3 class="titulo">Nuestra ubicación</h3>
+                <p>Nuestro establecimiento esta ubicado en el corazon de la ciudad</p>
+
+            </section>
+
             <section class="diferenciales">
                 <h3 class="titulo">Diferenciales</h3>
 
