--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="reset.css">
         <!-- con reset elimino las configuraciones que vienen por defecto en el navegador -->
         <link rel="stylesheet" href = "style_contacto.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
