Setting up class contenido-diferenciales

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -28,7 +28,7 @@
         </header>
 
         <img class="banner" src="banner/sillas.jpg">
-        
+
         <main>
             <section class="principal">
 
@@ -52,19 +52,21 @@
             </section>
 
             <section class="diferenciales">
+
                 <h3 class="titulo">Diferenciales</h3>
 
-                <!-- ul es para usar listas no ordenadas -->
-                <!-- li es para crear cada item de la lista -->
-                <ul>
-                    <li class="items">Atención personalizada a los clientes</li>
-                    <li class="items">Espacio diferenciado</li>
-                    <li class="items">localización</li>
-                    <li class="items">profesionales calificados</li>
-                </ul>
+                <div class="contenido-diferenciales">
+                    <!-- ul es para usar listas no ordenadas -->
+                    <!-- li es para crear cada item de la lista -->
+                    <ul class="lista-diferenciales">
+                        <li class="items">Atención personalizada a los clientes</li>
+                        <li class="items">Espacio diferenciado</li>
+                        <li class="items">localización</li>
+                        <li class="items">profesionales calificados</li>
+                    </ul>
 
-                <img src="diferenciales/diferenciales.jpg" class="imagen_diferenciales">   
-
+                    <img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">   
+                </div>
             </section>
 
             <div class="video">
