--- a/home_barberia.html
+++ b/home_barberia.html
@@ -63,9 +63,9 @@
                         <li class="items">Espacio diferenciado</li>
                         <li class="items">localización</li>
                         <li class="items">profesionales calificados</li>
-                    </ul>
-
-                    <img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">   
+                        <li class="items">Puntualidad</li>
+                        <li class="items">Limpieza</li>
+                    </ul><img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">   
                 </div>
             </section>
 
