Changes in width and margin of principal and map

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -29,6 +29,7 @@
 
         <main>
             <img class="banner" src="banner/sillas.jpg">
+            
             <section class="principal">
 
                 <h2 class="titulo">Sobre la Barbería Alura</h2>
@@ -70,8 +71,9 @@
 
             <div class="video">
                 <h3 class="titulo">Video de nuestra calidad servicio</h3>
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="mapa-contenido">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </main>
 
