--- a/home_barberia.html
+++ b/home_barberia.html
@@ -29,7 +29,7 @@
 
         <main>
             <img class="banner" src="banner/sillas.jpg">
-            
+
             <section class="principal">
 
                 <h2 class="titulo">Sobre la Barbería Alura</h2>
@@ -48,7 +48,9 @@
             <section class="mapa">
                 <h3 class="titulo">Nuestra ubicación</h3>
                 <p>Nuestro establecimiento esta ubicado en el corazon de la ciudad</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34784.869470159!2d-46.65499870427411!3d-23.593248407555798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1ses-419!2sbr!4v1602972945026!5m2!1ses-419!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="mapa-contenido">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34784.869470159!2d-46.65499870427411!3d-23.593248407555798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1ses-419!2sbr!4v1602972945026!5m2!1ses-419!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
             </section>
 
             <section class="diferenciales">
@@ -71,10 +73,10 @@
 
             <div class="video">
                 <h3 class="titulo">Video de nuestra calidad servicio</h3>
-                <div class="mapa-contenido">
+                
+                <div class="contenido-video">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-            </div>
         </main>
 
         <footer>
