--- a/home_barberia.html
+++ b/home_barberia.html
@@ -75,7 +75,7 @@
                 <h3 class="titulo">Video de nuestra calidad de servicio</h3>
 
                 <div class="contenido-video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
         </main>
 
