New meta to have responsive web page

--- a/home_barberia.html
+++ b/home_barberia.html
@@ -5,6 +5,8 @@
     <!--Etiquetas informativas con head-->
     <head>
         <meta charset="UTF-8">
+        <!-- con ente meta le pido a el navegador que use la pagina para dispositivos moviles -->
+        <meta name="viewport" content="width=device-width">
         <title>Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
          <!--Definiendo el titulo de mi pagina-->
