Adding Meta tag

--- a/productos.html
+++ b/productos.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title> Productos - Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <!-- con reset elimino las configuraciones que vienen pro defecto en el navegador -->
