Adding Meta viewport

--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title> Contacto - Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <!-- con reset elimino las configuraciones que vienen por defecto en el navegador -->
