--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Barberia Alura</title>
         <link rel="stylesheet" href="reset.css">
          <!--Definiendo el titulo de mi pagina-->
-        <link rel="stylesheet" href="style_home.css">
+        <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
 
