--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
                 <h1><img src="imagenes/logo.png"></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index1.html">Home</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
